# duraark_rdf

./: CMakeLists.txt  Dockerfile
cmake/modules/: FindRaptor.cmake
cmake/modules/self/: DuraarkRDFConfig.cmake
include/: entity.hpp  optional.hpp  osdef.hpp  turtle_input.hpp  turtle_input.ipp  turtle_input_helper.hpp  turtle_output.hpp  turtle_output_helper.hpp  wrappers.hpp
src/: entity.cpp  turtle_input.cpp  turtle_input_helper.cpp  turtle_output.cpp  turtle_output_helper.cpp  wrappers.cpp
